@@ -3,7 +3,7 @@ import groovy.json.JsonSlurper
 
 plugins {
 	id "java"
-	id "edu.wpi.first.GradleRIO" version "2025.1.1-beta-1"
+	id "edu.wpi.first.GradleRIO" version "2025.3.2"
 	id "com.diffplug.spotless" version "6.25.0"
 }
 
@@ -12,12 +12,14 @@ java {
 	targetCompatibility = JavaVersion.VERSION_17
 }
 
-def ROBOT_MAIN_CLASS = "frc.robot.Main"
+def ROBOT_MAIN_CLASS = "frc.Main"
+def COMPUTER_MAIN_CLASS = "frc.ComputerMain"
 def ROUTER_IP = "10.45.90.2"
 def USB_B_IP = "172.22.11.2"
 def IPS = [ROUTER_IP, USB_B_IP]
 def reachableIP
 
+final MAX_JAVA_HEAP_SIZE_MB = 100;
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
@@ -36,12 +38,24 @@ deploy {
 				// getTargetTypeClass is a shortcut to get the class type using a string
 
 				frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
-					jvmArgs.add('-Dcom.sun.management.jmxremote=true')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.port=1198')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.local.only=false')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.ssl=false')
-					jvmArgs.add('-Dcom.sun.management.jmxremote.authenticate=false')
-					jvmArgs.add("-Djava.rmi.server.hostname=${IPS[0]}")
+					// visual vm
+					// jvmArgs.add('-Dcom.sun.management.jmxremote=true')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.port=1198')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.local.only=false')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.ssl=false')
+					// jvmArgs.add('-Dcom.sun.management.jmxremote.authenticate=false')
+					// jvmArgs.add("-Djava.rmi.server.hostname=${IPS[0]}")
+
+					jvmArgs.add("-XX:+UnlockExperimentalVMOptions")
+					jvmArgs.add("-XX:GCTimeRatio=5")
+					jvmArgs.add("-XX:+UseSerialGC")
+					jvmArgs.add("-XX:MaxGCPauseMillis=50")
+
+					jvmArgs.add("-Xmx" + MAX_JAVA_HEAP_SIZE_MB + "M")
+					jvmArgs.add("-Xms" + MAX_JAVA_HEAP_SIZE_MB + "M")
+					jvmArgs.add("-XX:+AlwaysPreTouch")
+
+					// jvmArgs.add("-Xlog:gc") log garbage collector events in console
 				}
 
 				// Static files artifact
@@ -66,6 +80,7 @@ def includeDesktopSupport = true
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
 dependencies {
+	annotationProcessor wpi.java.deps.wpilibAnnotations()
 	implementation wpi.java.deps.wpilib()
 	implementation wpi.java.vendor.java()
 
@@ -86,8 +101,8 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	def akitJson = new JsonSlurper().parseText(new File(projectDir.getAbsolutePath() + "/vendordeps/AdvantageKit.json").text)
-	annotationProcessor "org.littletonrobotics.akit.junction:junction-autolog:$akitJson.version"
+	def akitJson = new groovy.json.JsonSlurper().parseText(new File(projectDir.getAbsolutePath() + "/vendordeps/AdvantageKit.json").text)
+	annotationProcessor "org.littletonrobotics.akit:akit-autolog:$akitJson.version"
 }
 
 
@@ -100,11 +115,6 @@ repositories {
 		}
 	}
 	mavenLocal()
-}
-
-
-configurations.configureEach {
-	exclude group: "edu.wpi.first.wpilibj"
 }
 
 test {
@@ -188,21 +198,13 @@ tasks.register('setVisualVMHost') {
 	}
 }
 
-compileJava.finalizedBy('checkAkitInstall')
-tasks.register('checkAkitInstall', JavaExec) {
-	group = 'execution'
-	dependsOn('classes')
-	mainClass = "org.littletonrobotics.junction.CheckInstall"
-	classpath = sourceSets.main.runtimeClasspath
-}
-
 tasks.named("deploy").configure { finalizedBy('runComputerPrograms') }
 tasks.register('runComputerPrograms', JavaExec) {
 	group = 'execution'
 	dependsOn('setReachableIP')
 	description = "Run the main class in ComputerMain"
 	classpath = sourceSets.main.runtimeClasspath
-	mainClass = "frc.robot.ComputerMain"
+	mainClass = COMPUTER_MAIN_CLASS
 	doFirst {
 		if (reachableIP == null || reachableIP.isEmpty()) {
 			throw new GradleException("reachableIP is null or empty. Please set a valid IP address.")
